--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
+# ===================
+# Dependencies
+# ===================
+node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,32 +12,83 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# ===================
+# Build outputs
+# ===================
+# Next.js
 /.next/
 /out/
-
-# production
 /build
 
-# misc
-.DS_Store
+# Plasmo (Chrome Extension)
+.plasmo/
+extension/build/
+extension/.plasmo/
+
+# ===================
+# Testing
+# ===================
+/coverage
+*.lcov
+
+# ===================
+# Environment & Secrets
+# ===================
+.env
+.env.*
+!.env.example
+!.env.local.example
 *.pem
 
-# debug
+# ===================
+# IDE & Editor
+# ===================
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# ===================
+# OS Generated
+# ===================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ===================
+# Debug Logs
+# ===================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
+# ===================
+# TypeScript
+# ===================
 *.tsbuildinfo
 next-env.d.ts
+
+# ===================
+# Vercel
+# ===================
+.vercel
+
+# ===================
+# Misc
+# ===================
+*.log
+*.cache
+.eslintcache
+.stylelintcache
+.turbo/
+dist/
