--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@stytch/nextjs": "^21.18.1",
+    "@stytch/vanilla-js": "^5.44.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "react": "19.2.3",
