feat: extension auth

--- a/extension/package.json
+++ b/extension/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "holodeck-builder",
-    "displayName": "Holodeck Builder",
+    "name": "nexbit-demo-builder",
+    "displayName": "Nexbit Demo Builder",
     "version": "0.0.1",
-    "description": "Record DOM interactions for Holodeck replays",
-    "author": "Holodeck Team",
+    "description": "Record DOM interactions for Nexbit replays",
+    "author": "Nexbit Team",
     "scripts": {
         "dev": "plasmo dev",
         "build": "plasmo build",
@@ -12,8 +12,7 @@
     "dependencies": {
         "plasmo": "0.90.5",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "rrweb": "^2.0.0-alpha.17"
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "@types/chrome": "^0.0.287",
@@ -29,7 +28,8 @@
         "permissions": [
             "activeTab",
             "storage",
-            "downloads"
+            "downloads",
+            "cookies"
         ],
         "host_permissions": [
             "<all_urls>"
